--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,10 @@ body {
   #departmentofeducation {
     grid-area: departmentofeducation;
     background-image: url(../images/depofedu.png);
+    height: 255px;
+  }
+  #departmentofeducation:hover {
+    opacity: 0.3;
   }
   #bookflip {
     grid-area: bookflip;
