--- a/workpage/css/style.css
+++ b/workpage/css/style.css
@@ -79,7 +79,7 @@ body {
     }
 
     .role {
-      background-color: #b4c2e4;
+      background-color: #99d6f2;
       opacity: 0.5;
       width: 500px;
       height: 250px;
@@ -324,5 +324,5 @@ body {
     font-family: 'Mulish', sans-serif;
   } 
   #background1 {
-    background-color: #ecf0f8;
+    background-color: #e6f5fc;
   }
